multi_index_map_derive2/tests/ui/accessor_non_unit.stderr
error: MultiIndexAccessor requires a unit struct
 --> tests/ui/accessor_non_unit.rs:5:15
  |
5 | struct NonUnit(u64);
  |               ^^^^^
